ボックスが床の上になかったら落ちる処理の追加

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Assets\Player\PlayerAction.cs" />
     <Compile Include="Assets\Player\CollisionController.cs" />
     <Compile Include="Assets\Scenes\SceanManeger.cs" />
+    <Compile Include="Assets\Box\BoxHit.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
